# OlivaDiceMaster

./: README.md  pyproject.toml
.github/workflows/: main.yml
OlivaDiceMaster/: __init__.py  accountManager.py  app.json  backup.py  data.py  main.py  msgCustom.py  msgCustomManager.py  msgReply.py  msgReplyModel.py  webAPI.py  webTool.py
